--- a/zajecia_2/zadanie_2/index.html
+++ b/zajecia_2/zadanie_2/index.html
@@ -7,34 +7,90 @@
 </head>
 <body>
 <header>
-    <h1>Kalkulator</h1>
+    <h1>Rezerwacja</h1>
 </header>
 <main>
     <nav>
 
     </nav>
     <article>
-        <form action="reservation.php" method="get">
-            <div>
-                <h3>Ilość osób</h3>
-                <select name="pplCount">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                </select>
+        <form action="reservation.php" method="post">
+            <div id="basicInfo">
+                <div id="basicInfoHeading"><h2>Podstawowe informacje</h2></div>
+                <div id="basicInfoForm">
+                    <div id="firstInfo">
+                        <div id="pplCount">
+                            <h3>Ilość osób</h3>
+                            <select name="pplCountVal">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                            </select>
+                        </div>
+                        <div id="startEndDate">
+                            <div id="startDateHeading"><h3>Czas pobytu</h3></div>
+                            <div id="startEndDatesInputs">
+                                <label for="startDate">Od:</label>
+                                <input type="date" id="startDate" name="startDate" required>
+                                <label for="startDate">Do:</label>
+                                <input type="date" id="endDate" name="endDate" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="personalInfo">
+                        <h3>Informacje osobowe</h3>
+                        <label for="fname">Imię:</label>
+                        <input type="text" id="fname" name="fname" required>
+                        <label for="lname">Nazwisko:</label>
+                        <input type="text" id="lname" name="lname" required>
+                        <label for="bday">Data urodzenia:</label>
+                        <input type="date" id="bday" name="bday" required>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div id="paymentInfo">
+                        <h3>Karta płatnicza</h3>
+                        <label for="creditFname">Imię:</label>
+                        <input type="text" id="creditFname" name="fname" required>
+                        <label for="creditLname">Nazwisko:</label>
+                        <input type="text" id="creditLname" name="lname" required>
+                        <label for="cardNumber">Numer karty:</label>
+                        <input type="number" id="cardNumber" name="cardNumber" pattern="[0-9]{13,16}" placeholder="np. 1234123412341234"  required>
+                        <div id="smallerCardInfo">
+                        <label for="cvv">CVV:</label>
+                        <input type="number" id="cvv" name="cvv" pattern="[0-9]{3}" placeholder="123" required>
+                            <label for="exp">Exp</label>
+                            <input type="text" id="exp" name="expiry" pattern="[0-9]{2}\/[0-9]{2}" placeholder="03/29" required>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div id="">
-                <h3>Informacje osobowe</h3>
-                <div>
-                <label for="fname">Imię:</label>
-                <input type="text" id="fname" name="fname">
-                <label for="lname">Nazwisko:</label>
-                <input type="text" id="lname" name="lname">
-                <label for="bday">Data urodzenia:</label>
-                <input type="date" id="bday" name="bday">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
+            <div id="udogodnienia">
+                <div id="udogodnieniaHeading"><h2>Udogodnienia</h2></div>
+                <div id="selectUdogodnienia">
+                    <div id="childBed">
+                        <div id="childBedHeading"><h3>Łóżeczko dla dziecka</h3></div>
+                        <div id="selectChildBed">
+                            <input type="radio" id="childBedYes" name="childBedSelection" value="1">
+                            <label for="childBedYes">Tak</label>
+                            <input type="radio" id="childBedNo" name="childBedSelection" value="0">
+                            <label for="childBedNo">Nie</label>
+                        </div>
+                    </div>
+                    <div id="otherUdogodnienia">
+                        <div id="otherUdogodnieniaHeading"><h3>Pozostałe</h3></div>
+                        <div id="otherUdogodnieniaList">
+                            <div class="checkbox">
+                                <input type="checkbox" id="otherUdogodnieniaPopielniczka" name="otherUdogodnieniaOption" value="Popielniczka">
+                                <label for="otherUdogodnieniaPopielniczka">Popielniczka</label>
+                            </div>
+                            <div class="checkbox">
+                                <input type="checkbox" id="otherUdogodnieniaKlimatyzacja" name="otherUdogodnieniaOption" value="Klimatyzacja">
+                                <label for="otherUdogodnieniaKlimatyzacja">Klimatyzacja</label>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </form>
