--- a/zajecia_2/zadanie_2/index.html
+++ b/zajecia_2/zadanie_2/index.html
@@ -20,7 +20,7 @@
                 <div id="basicInfoForm">
                     <div id="firstInfo">
                         <div id="pplCount">
-                            <label for="pplCountVal">Ilość osób</label>
+                            <label id="pplCountLabel" for="pplCountVal">Ilość osób</label>
                             <select id="pplCountVal" name="pplCountVal">
                                 <option>1</option>
                                 <option>2</option>
