--- a/zajecia_2/zadanie_2/index.html
+++ b/zajecia_2/zadanie_2/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Kalkulator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/indexStyle.css">
 </head>
 <body>
 <header>
