--- a/zajecia_2/zadanie_2/index.html
+++ b/zajecia_2/zadanie_2/index.html
@@ -85,11 +85,11 @@
                         <div id="otherUdogodnieniaHeading"><h3>Pozostałe</h3></div>
                         <div id="otherUdogodnieniaList">
                             <div class="checkbox">
-                                <input type="checkbox" id="otherUdogodnieniaPopielniczka" name="otherUdogodnieniaOption[ashtray]" value="1">
+                                <input type="checkbox" id="otherUdogodnieniaPopielniczka" name="otherUdogodnieniaOption[ashtray]" value="popielniczka">
                                 <label for="otherUdogodnieniaPopielniczka">Popielniczka</label>
                             </div>
                             <div class="checkbox">
-                                <input type="checkbox" id="otherUdogodnieniaKlimatyzacja" name="otherUdogodnieniaOption[conditioning]" value="1">
+                                <input type="checkbox" id="otherUdogodnieniaKlimatyzacja" name="otherUdogodnieniaOption[conditioning]" value="klimatyzacja">
                                 <label for="otherUdogodnieniaKlimatyzacja">Klimatyzacja</label>
                             </div>
                         </div>
